--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -217,6 +217,12 @@ joined = "Exploring the Realm!"
 [js.overlay]
 dismiss = "Dismiss"
 
+[js.processbuilder.exit]
+exitErrorHeader = "Game exited with an error code"
+message = "The game exited abnormally with the exit code: "
+copyCode = "Copy exit code"
+copyCodeText = "Minecraft exit code "
+
 [js.settings.fileSelectors]
 executables = "Executables"
 allFiles = "All Files"
@@ -341,3 +347,6 @@ gameNotPurchasedTitle = "Error During Login:<br>Game Not Purchased"
 gameNotPurchasedDesc = "The account you are trying to login with has not purchased a copy of Minecraft. You may purchase a copy on <a href=\"https://minecraft.net/\">Minecraft.net</a>"
 unknownErrorTitle = "Unknown Error During Login"
 unknownErrorDesc = "An unknown error has occurred. Please see the console for details."
+
+[js.news.NewsLink]
+URL = "https://news.lsmp.site/en_US/category/Noticias/feed/"
