--- a/lang/es_MX.toml
+++ b/lang/es_MX.toml
@@ -132,6 +132,7 @@ continueButton = "CONTINUAR"
 [js.discord]
 waiting = "Esperando al cliente.."
 state = "Servidor: {shortId}"
+srvt = "Jugando en Lurkarya"
 
 [js.index]
 microsoftLoginTitle = "Iniciar sesión con Microsoft"
