Readded the exit overlay, added language sync, added username updater

--- a/lang/es_MX.toml
+++ b/lang/es_MX.toml
@@ -57,6 +57,7 @@ navLauncher = "Launcher"
 navAbout = "Acerca de"
 navUpdates = "Actualizaciones"
 navDone = "Listo"
+syncGameLang = "Si el idioma del juego debe ser el mismo que el idioma del launcher"
 tabAccountHeaderText = "Configuracion de Cuenta"
 tabAccountHeaderDesc = "Agrega una nueva cuenta o administre las existentes"
 microsoftAccount = "Microsoft"
