--- a/lang/pt_BR.toml
+++ b/lang/pt_BR.toml
@@ -57,6 +57,7 @@ navLauncher = "Launcher"
 navAbout = "Sobre"
 navUpdates = "Atualizações"
 navDone = "Pronto"
+syncGameLang = "Se o idioma do jogo for igual ao idioma do launcher"
 tabAccountHeaderText = "Configuração de Conta"
 tabAccountHeaderDesc = "Adicione uma nova conta ou gerencie as existentes"
 microsoftAccount = "Microsoft"
