--- a/lang/pt_BR.toml
+++ b/lang/pt_BR.toml
@@ -207,6 +207,30 @@ launchingGame = "Iniciando o jogo.."
 launchWrapperNotDownloaded = "O arquivo principal, LaunchWrapper, não pôde ser baixado. Como resultado, o jogo não pôde ser iniciado.<br><br>Para resolver este problema, desative temporariamente seu software antivírus e tente iniciar o jogo novamente.<br><br>Se tiver tempo, por favor <a href=\"https://github.com/limbo-studios/LimboLauncher/issues\">reporte um problema</a> e nos informe qual software antivírus você está usando. Entraremos em contato com eles e tentaremos resolver o problema."
 doneEnjoyServer = "Feito. Aproveite o servidor!"
 checkConsoleForDetails = "Verifique o console (CTRL + Shift + i) para mais detalhes."
+accountLoginNeeded = "You must be logged into an account."
+fullRepairMode = "Full Repair Module exited with code {code}, assuming error."
+errFileVerification = "Error during file validation."
+accountToProcessBuilder = "Sending selected account ({userDisplayName}) to ProcessBuilder."
+gameError = "Game error: {data}"
+gameExited = "Game process exited with code {code}."
+gameErrorDuringLaunch = "Error during game launch {error}."
+waintingLaunchingGame = "Waiting for game window..."
+
+[js.landing.dlAsync.extraFileVerif]
+distributionIdentityError = "Expected Identity from Distribution for {moduleName}: {moduleIdentity}."
+modIdentityExtraction = "Extracting identity for mod at: {filePath}."
+identityNotFoundUsingHash  = "No identity found in manifest for {filePath}, using hash: {hash}"
+startingModValidation = "Starting mod validation..."
+modValidationBypassed = "Skipping validation for excluded mod: {mod}"
+validatingMod = "Validating mod: {mod}"
+expectedAndCalculatedIdentity = "Expected Identity: {expectedIdentity}, Calculated Identity for {mod}: {modIdentity}"
+modIdentityMismatchError = "Mod identity mismatch! Mod: {mod}, Expected: {expectedIdentity}, Found: {modIdentity}"
+expectedIdentityNotFound = "No expected identity found for mod: {mod}. Marking as invalid."
+modValidationCompleted = "Mod validation completed."
+invalidModsDetectedMessage = "Extra file verification has detected invalid mods. Please delete the {folder} folder and restart the launcher."
+downloadingFiles = "No invalid files, skipping download."
+usingExtraFileVerif = "Extra file verification activated, Resource usage..."
+notUsingExtraFileVerif = "Extra file verification deactivated, Not using resources..."
 
 [js.landing.news]
 checking = "Verificando notícias"
@@ -328,6 +352,8 @@ notFoundDesc = "A URL de autenticação não foi encontrada. Por favor, informe 
 accountMigratedTitle = "Erro ao fazer login:<br>Conta migrada"
 accountMigratedDesc = "Você tentou fazer login com uma conta migrada. Tente novamente usando o e-mail da conta como nome de usuário."
 invalidCredentialsTitle = "Erro ao fazer login:<br>Credenciais inválidas"
+playerNotFoundTitle = "Error During Login:<br>User not found."
+playerNotFoundDesc = "The user you've entered is invalid. Please try again."
 invalidCredentialsDesc = "O e-mail ou a senha que você inseriu estão incorretos. Tente novamente."
 tooManyAttemptsTitle = "Erro ao fazer login:<br>Muitas tentativas"
 tooManyAttemptsDesc = "Houve muitas tentativas de login com esta conta recentemente. Por favor, tente novamente mais tarde."
