--- a/lang/en_US.toml
+++ b/lang/en_US.toml
@@ -207,6 +207,30 @@ launchingGame = "Launching game.."
 launchWrapperNotDownloaded = "The main file, LaunchWrapper, failed to download properly. As a result, the game cannot launch.<br><br>To fix this issue, temporarily turn off your antivirus software and launch the game again.<br><br>If you have time, please <a href=\"https://github.com/dscalzi/HeliosLauncher/issues\">submit an issue</a> and let us know what antivirus software you use. We'll contact them and try to straighten things out."
 doneEnjoyServer = "Done. Enjoy the server!"
 checkConsoleForDetails = "Please check the console (CTRL + Shift + i) for more details."
+accountLoginNeeded = "You must be logged into an account."
+fullRepairMode = "Full Repair Module exited with code {code}, assuming error."
+errFileVerification = "Error during file validation."
+accountToProcessBuilder = "Sending selected account ({userDisplayName}) to ProcessBuilder."
+gameError = "Game error: {data}"
+gameExited = "Game process exited with code {code}."
+gameErrorDuringLaunch = "Error during game launch {error}."
+waintingLaunchingGame = "Waiting for game window..."
+
+[js.landing.dlAsync.extraFileVerif]
+distributionIdentityError = "Expected Identity from Distribution for {moduleName}: {moduleIdentity}."
+modIdentityExtraction = "Extracting identity for mod at: {filePath}."
+identityNotFoundUsingHash  = "No identity found in manifest for {filePath}, using hash: {hash}"
+startingModValidation = "Starting mod validation..."
+modValidationBypassed = "Skipping validation for excluded mod: {mod}"
+validatingMod = "Validating mod: {mod}"
+expectedAndCalculatedIdentity = "Expected Identity: {expectedIdentity}, Calculated Identity for {mod}: {modIdentity}"
+modIdentityMismatchError = "Mod identity mismatch! Mod: {mod}, Expected: {expectedIdentity}, Found: {modIdentity}"
+expectedIdentityNotFound = "No expected identity found for mod: {mod}. Marking as invalid."
+modValidationCompleted = "Mod validation completed."
+invalidModsDetectedMessage = "Extra file verification has detected invalid mods. Please delete the {folder} folder and restart the launcher."
+downloadingFiles = "No invalid files, skipping download."
+usingExtraFileVerif = "Extra file verification activated, Resource usage..."
+notUsingExtraFileVerif = "Extra file verification deactivated, Not using resources..."
 
 [js.landing.news]
 checking = "Checking for News"
@@ -328,7 +352,9 @@ notFoundDesc = "The authentication endpoint was not found. Please report this is
 accountMigratedTitle = "Error During Login:<br>Account Migrated"
 accountMigratedDesc = "You've attempted to login with a migrated account. Try again using the account email as the username."
 invalidCredentialsTitle = "Error During Login:<br>Invalid Credentials"
-invalidCredentialsDesc = "The email or password you've entered is incorrect. Please try again."
+invalidCredentialsDesc = "The user or password you've entered is incorrect. Please try again."
+playerNotFoundTitle = "Error During Login:<br>User not found."
+playerNotFoundDesc = "The user you've entered is invalid. Please try again."
 tooManyAttemptsTitle = "Error During Login:<br>Too Many Attempts"
 tooManyAttemptsDesc = "There have been too many login attempts with this account recently. Please try again later."
 invalidTokenTitle = "Error During Login:<br>Invalid Token"
