--- a/lang/es_MX.toml
+++ b/lang/es_MX.toml
@@ -207,6 +207,30 @@ launchingGame = "Iniciando el juego.."
 launchWrapperNotDownloaded = "El archivo principal, LaunchWrapper, no se pudo descargar. Como resultado, el juego no se pudo iniciar.<br><br>Para solucionar este problema, apaga temporalmente tu software antivirus y vuelve a iniciar el juego.<br><br>Si tienes tiempo, por favor <a href=\"https://github.com/dscalzi/HeliosLauncher/issues\">envia un issue</a> y cuéntanos qué software antivirus utilizas. Nos pondremos en contacto con ellos e intentaremos arreglar las cosas."
 doneEnjoyServer = "Hecho. Disfruta del servidor!"
 checkConsoleForDetails = "Ver la consola (CTRL + Shift + i) para más detalles."
+accountLoginNeeded = "You must be logged into an account."
+fullRepairMode = "Full Repair Module exited with code {code}, assuming error."
+errFileVerification = "Error during file validation."
+accountToProcessBuilder = "Sending selected account ({userDisplayName}) to ProcessBuilder."
+gameError = "Game error: {data}"
+gameExited = "Game process exited with code {code}."
+gameErrorDuringLaunch = "Error during game launch {error}."
+waintingLaunchingGame = "Waiting for game window..."
+
+[js.landing.dlAsync.extraFileVerif]
+distributionIdentityError = "Expected Identity from Distribution for {moduleName}: {moduleIdentity}."
+modIdentityExtraction = "Extracting identity for mod at: {filePath}."
+identityNotFoundUsingHash  = "No identity found in manifest for {filePath}, using hash: {hash}"
+startingModValidation = "Starting mod validation..."
+modValidationBypassed = "Skipping validation for excluded mod: {mod}"
+validatingMod = "Validating mod: {mod}"
+expectedAndCalculatedIdentity = "Expected Identity: {expectedIdentity}, Calculated Identity for {mod}: {modIdentity}"
+modIdentityMismatchError = "Mod identity mismatch! Mod: {mod}, Expected: {expectedIdentity}, Found: {modIdentity}"
+expectedIdentityNotFound = "No expected identity found for mod: {mod}. Marking as invalid."
+modValidationCompleted = "Mod validation completed."
+invalidModsDetectedMessage = "Extra file verification has detected invalid mods. Please delete the {folder} folder and restart the launcher."
+downloadingFiles = "No invalid files, skipping download."
+usingExtraFileVerif = "Extra file verification activated, Resource usage..."
+notUsingExtraFileVerif = "Extra file verification deactivated, Not using resources..."
 
 [js.landing.news]
 checking = "Buscando noticias"
@@ -329,6 +353,8 @@ accountMigratedTitle = "Error al iniciar sesión:<br>Cuenta migrada"
 accountMigratedDesc = "Intentó iniciar sesión con una cuenta migrada. Vuelva a intentarlo utilizando el correo electrónico de la cuenta como nombre de usuario."
 invalidCredentialsTitle = "Error al iniciar sesión:<br>Credenciales no válidas"
 invalidCredentialsDesc = "El correo electrónico o la contraseña que has introducido son incorrectos. Inténtalo de nuevo."
+playerNotFoundTitle = "Error During Login:<br>User not found."
+playerNotFoundDesc = "The user you've entered is invalid. Please try again."
 tooManyAttemptsTitle = "Error al iniciar sesión:<br>Demasiados intentos"
 tooManyAttemptsDesc = "Ha habido demasiados intentos de inicio de sesión con esta cuenta recientemente. Por favor, inténtelo de nuevo más tarde."
 invalidTokenTitle = "Error al iniciar sesión:<br>Token no válido"
