--- a/lang/fr_FR.toml
+++ b/lang/fr_FR.toml
@@ -207,6 +207,30 @@ launchingGame = "Lancement du jeu.."
 launchWrapperNotDownloaded = "Le fichier principal, LaunchWrapper, n'a pas été téléchargé correctement. Par conséquent, le jeu ne peut pas se lancer.<br><br>Pour résoudre ce problème, désactivez temporairement votre logiciel antivirus et relancez le jeu.<br><br>Si vous avez le temps, veuillez <a href=\"https://github.com/dscalzi/HeliosLauncher/issues\">soumettre un problème</a> et nous indiquer le logiciel antivirus que vous utilisez. Nous les contacterons et essaierons d'arranger les choses."
 doneEnjoyServer = "Fini, profitez du serveur !"
 checkConsoleForDetails = "Veuillez consulter la console (CTRL + Shift + i) pour plus de détails."
+accountLoginNeeded = "You must be logged into an account."
+fullRepairMode = "Full Repair Module exited with code {code}, assuming error."
+errFileVerification = "Error during file validation."
+accountToProcessBuilder = "Sending selected account ({userDisplayName}) to ProcessBuilder."
+gameError = "Game error: {data}"
+gameExited = "Game process exited with code {code}."
+gameErrorDuringLaunch = "Error during game launch {error}."
+waintingLaunchingGame = "Waiting for game window..."
+
+[js.landing.dlAsync.extraFileVerif]
+distributionIdentityError = "Expected Identity from Distribution for {moduleName}: {moduleIdentity}."
+modIdentityExtraction = "Extracting identity for mod at: {filePath}."
+identityNotFoundUsingHash  = "No identity found in manifest for {filePath}, using hash: {hash}"
+startingModValidation = "Starting mod validation..."
+modValidationBypassed = "Skipping validation for excluded mod: {mod}"
+validatingMod = "Validating mod: {mod}"
+expectedAndCalculatedIdentity = "Expected Identity: {expectedIdentity}, Calculated Identity for {mod}: {modIdentity}"
+modIdentityMismatchError = "Mod identity mismatch! Mod: {mod}, Expected: {expectedIdentity}, Found: {modIdentity}"
+expectedIdentityNotFound = "No expected identity found for mod: {mod}. Marking as invalid."
+modValidationCompleted = "Mod validation completed."
+invalidModsDetectedMessage = "Extra file verification has detected invalid mods. Please delete the {folder} folder and restart the launcher."
+downloadingFiles = "No invalid files, skipping download."
+usingExtraFileVerif = "Extra file verification activated, Resource usage..."
+notUsingExtraFileVerif = "Extra file verification deactivated, Not using resources..."
 
 [js.landing.news]
 checking = "Vérification de l'actualité"
@@ -329,6 +353,8 @@ accountMigratedTitle = "Erreur lors de la connexion :<br>Compte migré"
 accountMigratedDesc = "Vous avez tenté de vous connecter avec un compte migré. Réessayez en utilisant l'email du compte comme nom d'utilisateur."
 invalidCredentialsTitle = "Erreur lors de la connexion :<br>Identifiants invalides"
 invalidCredentialsDesc = "L'email ou le mot de passe que vous avez saisi est incorrect. Veuillez réessayer."
+playerNotFoundTitle = "Error During Login:<br>User not found."
+playerNotFoundDesc = "The user you've entered is invalid. Please try again."
 tooManyAttemptsTitle = "Erreur lors de la connexion :<br>Trop de tentatives"
 tooManyAttemptsDesc = "Il y a eu trop de tentatives de connexion avec ce compte récemment. Veuillez réessayer plus tard."
 invalidTokenTitle = "Erreur lors de la connexion :<br>Jeton invalide"
